# bayes-battle

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  milestone-epic.md
.github/workflows/: ci.yml
docs/: data-schema-proposal.md  implementation-plan.md  methodology.md
docs/architecture/: battle-core.md  core-types.md
docs/battle-mechanics/: README.md  damage-calculation.md  priority-speed.md  status-conditions.md  turn-order.md
issues/: M0-data-schema.md  M1-battle-core-minimal.md  M2-battle-core-rules.md  M3-battle-api.md  M4-match-server.md  M5-frontend.md  M6-belief-tracker.md  M7-policy-learning.md
rl-engine/: README.md  pyproject.toml
