[tool.poetry]
name = "bayes-battle-rl"
version = "0.1.0"
description = "Reinforcement learning engine for Bayes Battle"
authors = ["Bayes Battle Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "belief"}, {include = "policy"}, {include = "env"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
torch = "^2.1.0"
gymnasium = "^0.29.0"
pydantic = "^2.5.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
mypy = "^1.7.0"
ruff = "^0.1.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
